// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LightComponent should render correctly for Ambient light 1`] = `
<group
  name="LIGHT_COMPONENT_undefined"
>
  <ambientLight
    color={16777215}
    intensity={1}
  />
</group>
`;

exports[`LightComponent should render correctly for Directional light 1`] = `
<group
  name="LIGHT_COMPONENT_undefined"
>
  <directionalLight
    castShadow={true}
    color={16777215}
    intensity={1}
    shadow-bias={0.0001}
    shadow-camera-bottom={-10}
    shadow-camera-far={1000}
    shadow-camera-left={-10}
    shadow-camera-near={0.1}
    shadow-camera-right={10}
    shadow-camera-top={10}
    shadow-mapSize-height={4096}
    shadow-mapSize-width={4096}
  />
</group>
`;

exports[`LightComponent should render correctly for Hemisphere light 1`] = `
<group
  name="LIGHT_COMPONENT_undefined"
>
  <hemisphereLight
    color={16777215}
    groundColor={16777215}
    intensity={1}
  />
</group>
`;

exports[`LightComponent should render correctly for Point light 1`] = `
<group
  name="LIGHT_COMPONENT_undefined"
>
  <pointLight
    castShadow={true}
    color={16777215}
    decay={0.1}
    distance={100}
    intensity={1}
    shadow-bias={0.0001}
    shadow-camera-bottom={-100}
    shadow-camera-far={1000}
    shadow-camera-left={-100}
    shadow-camera-near={0.1}
    shadow-camera-right={100}
    shadow-camera-top={100}
    shadow-mapSize-height={4096}
    shadow-mapSize-width={4096}
  />
</group>
`;

exports[`LightComponent should render correctly for Unknown light 1`] = `
<group
  name="LIGHT_COMPONENT_undefined"
/>
`;
